fix font-sizes + colors + align preview page

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,17 +4,17 @@
   background: var(--primary-color);
   overflow-x: hidden;
   &.light-mode{
-    --primary-color: #f3f3f3;
-    --secondary-color: #fff;
-    --title-color:rgb(20, 20, 20);
+    --primary-color:  hsl(0, 0%, 98%);
+    --secondary-color: hsl(0, 0%, 100%); 
+    --title-color: hsl(200, 15%, 8%);
     --border-card-color:#dadada;
     --swicther-color:rgb(210 74 74);
     --shadow-secondary-color: rgb(236, 236, 236);
   }
   &.dark-mode{
-    --primary-color: #202e37;
-    --secondary-color: #293743;
-    --title-color:#fff;
+    --primary-color:  hsl(207, 26%, 17%);
+    --secondary-color: hsl(209, 23%, 22%);
+    --title-color:hsl(0, 0%, 100%);
     --border-card-color:#22313c;
     --swicther-color:rgb(210 74 74);
     --shadow-secondary-color: #223441;
