--- a/src/components/CardListComponent/CardListComponent.scss
+++ b/src/components/CardListComponent/CardListComponent.scss
@@ -22,7 +22,6 @@
     }
     .card{
         &-item{
-    
         overflow: hidden;
         position: relative;
         display: flex;
@@ -32,6 +31,7 @@
         box-shadow: 0 0 1px var(--secondary-color);
         text-decoration: none;
         border: 1px solid var(--border-card-color);
+    
         &:hover{
             filter: drop-shadow(0 0 1px var(--secondary-color));
             .card-img{
@@ -63,16 +63,19 @@
             padding: 1em;
         }
         &-name{
-            font-weight: bold;
-            font-size: 13px;
+            font-weight: 800;
+            font-size: 14px;
+            font-family: 'Nunito Sans';
         }
         &-title{
-            font-weight: bold;
-            font-size: 10px;
+            font-weight: 600;
+            font-size: 14px;
+            font-family: 'Nunito Sans';
         }
         &-value{
-            font-weight: 400;
-            font-size: 10px;
+            font-weight: 300;
+            font-size: 14px;
+            font-family: 'Nunito Sans';
         }
     }   
 }
